<resources>
    <string name="app_name">Wander</string>
    <string name="title_activity_maps">Map</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="clear">Clear</string>
    <string name="show_geogfences">Reveal GF</string>
    <string name="geofences_added">Geofence added</string>
    <string name="geofences_not_added">Geofence error at adding</string>
    <string name="content_text">Prueba</string>
    <string name="channel_name">geofences</string>
    <string name="notification_channel_description">Active fences</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">User name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="user_name">User name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="log_out">Log out</string>
    <string name="add_location_title">Would you like to add this location for a promotion?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="email2">Email</string>
    <string name="geofence_not_available">Geofence not available</string>
    <string name="geofence_too_many_geofences">Too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many pending intents</string>
    <string name="unknown_geofence_error">Unknow geofenece error</string>
    <string name="geofence_entered">Entered into geofence</string>
</resources>
